# EM9191_libmbim_meson

./: README.md  build-config.h.in  meson.build  meson_options.txt
EM9191_plugin_libmbim/: .cproject  .project  EM9191_module.h  config_example.json  helper.h  main.cpp
subprojects/: .gitignore
